<resources>
    <string name="app_name">Mixit</string>
    <string name="title_activity_recipes">RecipesActivity</string>
    <string name="title_activity_ingredients">IngredientsActivity</string>
    <string name="title_activity_mixing">MixingActivity</string>
    <string name="measuretab1">measuretab1</string>
    <string name="measuretab2">measuretab2</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_measure">MeasureActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_recipe_detials_view">RecipeDetialsViewActivity</string>
    <string name="mixing_info">Please add the ingredients that you have right now. After that, we will filter the
    beverages you can make out of them.</string>

    <string name="filter_info">Please add some constraints so I can find the recipes you may like.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_info">The personal inforamtions bellow wont be sent to any server, are only used for on-device calculations. </string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="settings_ask_text">The stored personal data is only stored on your device and only used for calculating current blood alcohol level. The algorithms inputs are age, weight, height, gender, the beverage you consumed and the time you finished with it. But notice that, the blood alhocol level given by the application simply can not be as exact as a probe. Also notice that it can sometimes be inaccurate because it depends on several more parameters. These kind of informations calculated by the application are not officialy accepted, just informational values.</string>

    <string name="welcome">Welcome to mixit!</string>
    <string name="welcome_info">Before starting the application, some informations are needed for certain calculations. Please scroll down and fill the form properly. Hope you will enjoy using Mixit!</string>
    <string name="measure_ask_text">With this service, you can easily calculate your blood alcohol content by adding the consumed drink and time you finished with them. The algorithm works with the personal datas that you can edit in settings. The algorithm works better if you give exact values. After the calculation the data is going to be displayed in the chart. It also marks the BAC when you will be drunk, and unconscious.</string>
    <string name="v_1_0_0">v 1.0.0</string>
    <string name="developed_by">Developed by</string>
    <string name="bal_zs_b_res">Balázs Béres</string>
    <string name="_10_items">10 items</string>
    <string name="order_list_by_name">Order list by name</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="none">None</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipes">Recipes</string>
    <string name="mixing">Mixing</string>
    <string name="filter">Filter</string>
    <string name="measure">Measure</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="recipe">Recipe</string>
    <string name="name">name</string>
    <string name="contained_alcohol_in_percents">Contained alcohol in percents</string>
    <string name="price_of_one_liter">Price of one liter</string>
    <string name="ingredient">Ingredient</string>
    <string name="amount_ml">Amount (ml)</string>
    <string name="delete_item">delete item</string>
    <string name="name_of_the_recipe">Name of the recipe</string>
    <string name="add_new_ingredient">add new ingredient</string>
    <string name="your_name">Your name</string>
    <string name="your_age">Your age</string>
    <string name="your_gender">Your gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="your_weight_in_kilogramms">Your weight in kilogramms</string>
    <string name="your_height_in_centimeters">Your height in centimeters</string>
    <string name="beverages_consumed_during_the_recent_12_hours">Beverages consumed during the recent 12 hours</string>
    <string name="recipe_">recipe</string>
    <string name="ingredients_needed">Ingredients needed:</string>
    <string name="save_changes">Save changes</string>
    <string name="name_of_the_consumed_beverage">Name of the consumed beverage</string>
    <string name="amount_of_the_consumed_beverage_ml">Amount of the consumed beverage (ml)</string>
    <string name="minutes_spent_since_finished_with_the_beverage">Minutes spent since finished with the beverage</string>
    <string name="constraint">Constraint</string>


</resources>
