<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dip">



    <TextView
        android:id="@+id/recipe_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_the_recipe"
        android:layout_marginHorizontal="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:layout_marginBottom="30dp"
        android:id="@+id/recipe_name_edit_text"
        android:layout_marginHorizontal="15dp">

    </EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:id="@+id/ingredients_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_ingredient"
            android:layout_weight="1"
            android:padding="5dp"
            android:id="@+id/add_ingredient_button"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp"


     >

        <LinearLayout
            android:id="@+id/list_of_rows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="90dp"
            android:divider="@drawable/divider"
            android:showDividers="middle"
          >
        </LinearLayout>


    </ScrollView>
</LinearLayout>