<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info_activities.InfosActivity"
    android:background="@color/white">

    <ImageView
        android:layout_height="40dp"
        android:layout_width="40dp"
        android:src="@drawable/keyboard_back_arrow"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/infos_backbtn"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/mixit_text_black"
        android:layout_marginTop="260dp"
        android:layout_gravity="center_horizontal"/>


    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/roundiconred"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/v_1_0_0"
        android:gravity="center_horizontal"
        android:layout_marginTop="340dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:gravity="center_horizontal"
        android:layout_marginTop="390dp"
        android:textSize="13sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bal_zs_b_res"
        android:textSize="22sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="410dp"/>









    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/email_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email"
        android:onClick="onEmailFabClicked"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>