<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MenuActivity"
    android:background="@drawable/bgapps"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <RelativeLayout
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--icon made by https://www.flaticon.com/authors/freepik from www.flaticon.com-->
            <ImageView
                android:id="@+id/menulogotext"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="35dp"
                android:layout_weight="1.00"
                android:src="@drawable/roundiconred" />

            <ImageView
                android:id="@+id/menulogo"
                android:layout_width="250dp"
                android:layout_height="120dp"
                android:layout_weight="1.00"
                android:layout_marginLeft="-20dp"
                android:src="@drawable/m" />

        </RelativeLayout>


        <GridLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <androidx.cardview.widget.CardView
                android:onClick="ingredientsOnClick"
                android:id="@+id/ingredients_menuitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--logo made by https://www.flaticon.com/authors/ultimatearm from www.flaticon.com-->
                    <ImageView
                        android:src="@drawable/ingredients"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/ingredients"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>




            <androidx.cardview.widget.CardView
                android:id="@+id/recipes_menuitem"
                android:onClick="recipesOnClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--logo made by https://www.flaticon.com/authors/smashicons from www.flaticon.com-->
                    <ImageView
                        android:src="@drawable/recipes"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/recipes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>




            <androidx.cardview.widget.CardView
                android:id="@+id/mixing_menuitem"
                android:onClick="mixingOnClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--logo made by https://www.flaticon.com/authors/nhor-phai from www.flaticon.com-->
                    <ImageView
                        android:src="@drawable/mixing"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/mixing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>




            <androidx.cardview.widget.CardView
                android:id="@+id/filter_menuitem"
                android:onClick="filterOnClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--logo made by by https://www.flaticon.com/authors/freepik from www.flaticon.com -->
                    <ImageView
                        android:src="@drawable/filter"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>




            <androidx.cardview.widget.CardView
                android:id="@+id/measure_menuitem"
                android:onClick="measureOnClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--logo made by https://www.flaticon.com/authors/freepik from www.flaticon.com-->
                    <ImageView
                        android:src="@drawable/measure"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/measure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>




            <androidx.cardview.widget.CardView
                android:id="@+id/history_menuitem"
                android:onClick="historyOnClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

            <LinearLayout
                android:padding="16dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--icon made by https://www.flaticon.com/authors/freepik from www.flaticon.com-->
                <ImageView
                    android:src="@drawable/calendar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

                <TextView
                    android:textColor="#6f6f6f"
                    android:textSize="18sp"
                    android:text="@string/history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            </androidx.cardview.widget.CardView>




            <androidx.cardview.widget.CardView
                android:id="@+id/settings_menuitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:onClick="settingsOnClicked">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <!--logo made by https://www.flaticon.com/authors/vectors-market from www.flaticon.com-->
                    <ImageView
                        android:src="@drawable/settings"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/info_menuitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="2dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="infosOnClicked">

                    <!--icon made by https://www.flaticon.com/authors/freepik from www.flaticon.com-->
                    <ImageView
                        android:src="@drawable/information"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </GridLayout>

    </LinearLayout>

</ScrollView>